@@ -17,17 +17,13 @@
 
 package org.dockbox.hartshorn.core;
 
-import org.dockbox.hartshorn.core.domain.AbstractIdentifiable;
+import org.checkerframework.checker.nullness.qual.NonNull;
+import org.checkerframework.checker.nullness.qual.Nullable;
 import org.dockbox.hartshorn.core.domain.Exceptional;
-import org.dockbox.hartshorn.core.domain.tuple.Triad;
 import org.dockbox.hartshorn.core.domain.tuple.Tuple;
 import org.dockbox.hartshorn.core.domain.tuple.Vector3N;
 import org.dockbox.hartshorn.core.exceptions.ImpossibleFileException;
 import org.dockbox.hartshorn.core.function.CheckedRunnable;
-import org.jetbrains.annotations.NonNls;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
-import org.jetbrains.annotations.UnmodifiableView;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
@@ -40,7 +36,6 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
-import java.time.temporal.TemporalUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -71,17 +66,9 @@ import java.util.stream.StreamSupport;
  * Wraps all utility classes to a common accessor. This way all {@code final} utility classes can be
  * accessed at once and indexed more easily.
  */
-@SuppressWarnings({ "unused", "OverlyComplexClass", "ResultOfMethodCallIgnored" })
 public final class HartshornUtils {
 
-    /**
-     * The maximum amount of decimals used when rounding a number in {@link HartshornUtils#round(double,
-     * int)}.
-     */
-    public static final int MAXIMUM_DECIMALS = 15;
-
     private static final Random random = new Random();
-    private static final Map<Object, Triad<LocalDateTime, Long, TemporalUnit>> activeCooldowns = HartshornUtils.emptyConcurrentMap();
     private static final char[] _hex = {
             '0', '1', '2', '3', '4', '5', '6', '7',
             '8', '9', 'A', 'B', 'C', 'D', 'E', 'F'
@@ -94,7 +81,7 @@ public final class HartshornUtils {
     private static final int secondsInWeek = 7 * HartshornUtils.secondsInDay;
     /**
      * The globally 'empty' unique ID which can be used for empty implementations of {@link
-     * AbstractIdentifiable}.
+     * org.dockbox.hartshorn.core.domain.Identifiable}.
      */
     public static UUID EMPTY_UUID = UUID.fromString("00000000-1111-2222-3333-000000000000");
 
@@ -105,20 +92,15 @@ public final class HartshornUtils {
      * provided {@link HartshornUtils#emptyMap()} is returned. The constructed map is not concurrent.
      * Entries can easily be created using {@link HartshornUtils#entry(Object, Object)}
      *
-     * @param <K>
-     *         The (super)type of all keys in the entry set
-     * @param <V>
-     *         The (super)type of all values in the entry set
-     * @param entries
-     *         The entries to use while constructing a new map
+     * @param <K> The (super)type of all keys in the entry set
+     * @param <V> The (super)type of all values in the entry set
+     * @param entries The entries to use while constructing a new map
      *
      * @return The new non-concurrent map
-     * @throws NullPointerException
-     *         If an entry is null
+     * @throws NullPointerException If an entry is null
      * @see HartshornUtils#entry(Object, Object)
      */
     @SafeVarargs
-    @SuppressWarnings("varargs")
     public static <K, V> Map<K, V> ofEntries(final Entry<? extends K, ? extends V>... entries) {
         if (0 == entries.length) { // implicit null check of entries array
             return HartshornUtils.emptyMap();
@@ -136,13 +118,10 @@ public final class HartshornUtils {
      * Returns a new empty map. This should be used globally instead of instantiating maps manually.
      * The returned map is not concurrent.
      *
-     * @param <K>
-     *         The (super)type of the map key-set
-     * @param <V>
-     *         The (super)type of the map value-set
+     * @param <K> The (super)type of the map key-set
+     * @param <V> The (super)type of the map value-set
      *
      * @return The new map
-     * @see HartshornUtils#emptyConcurrentMap()
      */
     public static <K, V> Map<K, V> emptyMap() {
         return new HashMap<>();
@@ -152,178 +131,131 @@ public final class HartshornUtils {
      * Creates a new entry based on a given key and value combination. Both the key and value may be
      * null.
      *
-     * @param <K>
-     *         The type of the key
-     * @param <V>
-     *         The type of the value
-     * @param k
-     *         The key
-     * @param v
-     *         The value
+     * @param <K> The type of the key
+     * @param <V> The type of the value
+     * @param k The key
+     * @param v The value
      *
      * @return The entry
      * @see HartshornUtils#ofEntries(Entry[])
      */
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <K, V> Entry<K, V> entry(final K k, final V v) {
         return new Tuple<>(k, v);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> List<T> singletonList(final T mockWorld) {
         return Collections.singletonList(mockWorld);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> List<T> emptyConcurrentList() {
         return new CopyOnWriteArrayList<>();
+    }
+
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static <K, V> ConcurrentMap<K, V> emptyConcurrentMap() {
+        return new ConcurrentHashMap<>();
+    }
+
+    @NonNull
+    @SafeVarargs
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static <T> List<T> asUnmodifiableList(final T... objects) {
+        return List.of(objects);
     }
 
     public static <T> Set<T> emptyConcurrentSet() {
         return ConcurrentHashMap.newKeySet();
     }
 
-    public static <K, V> ConcurrentMap<K, V> emptyConcurrentMap() {
-        return new ConcurrentHashMap<>();
-    }
-
-    @UnmodifiableView
-    @NotNull
-    @SafeVarargs
-    public static <T> List<T> asUnmodifiableList(final T... objects) {
-        return Collections.unmodifiableList(HartshornUtils.asList(objects));
-    }
-
-    @NotNull
+    @NonNull
     @SafeVarargs
     public static <T> List<T> asList(final T... objects) {
-        return HartshornUtils.asList(Arrays.asList(objects));
+        return new ArrayList<>(Arrays.asList(objects));
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> List<T> asList(final Collection<T> collection) {
         return new ArrayList<>(collection);
     }
 
     @SafeVarargs
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> List<T> asList(final Predicate<T> predicate, final T... objects) {
-        final List<T> list = HartshornUtils.emptyList();
+        final List<T> list = new ArrayList<>();
         for (final T object : objects) {
             if (predicate.test(object)) list.add(object);
         }
         return list;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> List<T> emptyList() {
         return new ArrayList<>();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> List<T> asUnmodifiableList(final Collection<T> collection) {
-        return Collections.unmodifiableList(HartshornUtils.asList(collection));
+        return List.copyOf(collection);
     }
 
-    @UnmodifiableView
-    @NotNull
+    @NonNull
     @SafeVarargs
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> Set<T> asUnmodifiableSet(final T... objects) {
-        return Collections.unmodifiableSet(HartshornUtils.asSet(objects));
+        return Set.of(objects);
     }
 
-    @NotNull
+    @NonNull
     @SafeVarargs
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> Set<T> asSet(final T... objects) {
         return new HashSet<>(HartshornUtils.asList(objects));
     }
 
     @SafeVarargs
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> Set<T> asSet(final Predicate<T> predicate, final T... objects) {
-        final Set<T> list = HartshornUtils.emptySet();
+        final Set<T> list = new HashSet<>();
         for (final T object : objects) {
             if (predicate.test(object)) list.add(object);
         }
         return list;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> Set<T> emptySet() {
         return new HashSet<>();
     }
 
     @SafeVarargs
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> Collection<T> asUnmodifiableCollection(final T... collection) {
         return Collections.unmodifiableCollection(Arrays.asList(collection));
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> Collection<T> asUnmodifiableCollection(final Collection<T> collection) {
         return Collections.unmodifiableCollection(collection);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <K, V> Map<K, V> asUnmodifiableMap(final Map<K, V> map) {
         return Collections.unmodifiableMap(map);
     }
 
-    @UnmodifiableView
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> Set<T> asUnmodifiableSet(final Collection<T> objects) {
         return Set.copyOf(objects);
     }
 
-    @UnmodifiableView
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> List<T> asUnmodifiableList(final List<T> objects) {
         return Collections.unmodifiableList(objects);
-    }
-
-    /**
-     * Places an object in the cooldown queue for a given amount of time. If the object is already in
-     * the cooldown queue it will not be overwritten and the existing queue position with be kept.
-     *
-     * @param o
-     *         The object to place in cooldown
-     * @param duration
-     *         The duration
-     * @param timeUnit
-     *         The time unit in which the duration is kept
-     */
-    public static void cooldown(final Object o, final Long duration, final TemporalUnit timeUnit) {
-        HartshornUtils.cooldown(o, duration, timeUnit, false);
-    }
-
-    /**
-     * Places an object in the cooldown queue for a given amount of time. If the object is already in
-     * the cooldown queue it may be overwritten depending on the value of {@code overwriteExisting}.
-     *
-     * @param o
-     *         The object to place in cooldown
-     * @param duration
-     *         The duration
-     * @param timeUnit
-     *         The time unit in which the duration is kept
-     * @param overwriteExisting
-     *         Whether to overwrite existing cooldowns
-     */
-    public static void cooldown(final Object o, final Long duration, final TemporalUnit timeUnit, final boolean overwriteExisting) {
-        if (HartshornUtils.inCooldown(o) && !overwriteExisting) return;
-        activeCooldowns.put(o, new Triad<>(LocalDateTime.now(), duration, timeUnit));
-    }
-
-    /**
-     * Returns true if an object is in an active cooldown queue. Otherwise false
-     *
-     * @param o
-     *         The object
-     *
-     * @return true if an object is in an active cooldown queue. Otherwise false
-     */
-    public static boolean inCooldown(final Object o) {
-        if (activeCooldowns.containsKey(o)) {
-            final LocalDateTime now = LocalDateTime.now();
-            final Triad<LocalDateTime, Long, TemporalUnit> cooldown = activeCooldowns.get(o);
-            final LocalDateTime timeCooledDown = cooldown.first();
-            final Long duration = cooldown.second();
-            final TemporalUnit timeUnit = cooldown.third();
-
-            final LocalDateTime endTime = timeCooledDown.plus(duration, timeUnit);
-
-            return endTime.isAfter(now);
-
-        }
-        else return false;
     }
 
     public static String capitalize(final String value) {
@@ -336,10 +268,12 @@ public final class HartshornUtils {
         return null == value || value.isEmpty();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int length(final CharSequence s) {
         return null == s ? 0 : s.length();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int lastIndexOf(final String path, final char ch) {
         if (null == path) {
             return -1;
@@ -347,15 +281,17 @@ public final class HartshornUtils {
         return path.lastIndexOf(ch);
     }
 
-    @SuppressWarnings("MagicNumber")
+    @Deprecated(since = "22.1", forRemoval = true)
     public static char convertDigit(final int value) {
         return _hex[value & 0x0f];
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int[] range(final int max) {
         return HartshornUtils.range(0, max);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int[] range(final int min, final int max) {
         final int[] range = new int[(max - min) + 1]; // +1 as both min and max are inclusive
         for (int i = min; i <= max; i++) {
@@ -364,11 +300,13 @@ public final class HartshornUtils {
         return range;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String shorten(final String string, final int maxLength) {
         if (string.length() < maxLength) return string;
         return string.substring(0, maxLength);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int count(final String s, final char c) {
         if (HartshornUtils.empty(s)) {
             return 0;
@@ -385,8 +323,9 @@ public final class HartshornUtils {
         return count;
     }
 
-    @NotNull
-    public static String wildcardToRegexString(@NotNull final CharSequence wildcard) {
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static String wildcardToRegexString(@NonNull final CharSequence wildcard) {
         final StringBuilder s = new StringBuilder(wildcard.length());
         s.append('^');
         for (int i = 0, is = wildcard.length(); i < is; i++) {
@@ -406,7 +345,8 @@ public final class HartshornUtils {
         return s.toString();
     }
 
-    public static int levenshteinDistance(@NonNls final CharSequence source, @NonNls final CharSequence target) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static int levenshteinDistance(final CharSequence source, final CharSequence target) {
         final int length = verifyContentLength(source, target);
         if (-1 < length) return length;
 
@@ -443,6 +383,7 @@ public final class HartshornUtils {
         return v1[target.length()];
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     private static int verifyContentLength(final CharSequence source, final CharSequence target) {
         if (null == source || "".contentEquals(source)) {
             return null == target || "".contentEquals(target) ? 0 : target.length();
@@ -453,6 +394,7 @@ public final class HartshornUtils {
         return -1;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static long minimum(final long... values) {
         final int len = values.length;
         long current = values[0];
@@ -460,9 +402,8 @@ public final class HartshornUtils {
         return current;
     }
 
-    @SuppressWarnings("OverlyComplexMethod")
-    public static int damerauLevenshteinDistance(
-            @NonNls final CharSequence source, @NonNls final CharSequence target) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static int damerauLevenshteinDistance(final CharSequence source, final CharSequence target) {
         final int length = verifyContentLength(source, target);
         if (-1 < length) return length;
 
@@ -525,7 +466,8 @@ public final class HartshornUtils {
         return distanceMatrix[srcLen][targetLen];
     }
 
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String randomString(final int minLen, final int maxLen) {
         final StringBuilder s = new StringBuilder();
         final int length = minLen + random.nextInt(maxLen - minLen + 1);
@@ -535,18 +477,21 @@ public final class HartshornUtils {
         return s.toString();
     }
 
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String randomChar(final boolean upper) {
         final int r = random.nextInt(26);
         return upper ? "" + (char) ((int) 'A' + r) : "" + (char) ((int) 'a' + r);
     }
 
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String createUtf8String(final byte[] bytes) {
         return HartshornUtils.createString(bytes, "UTF-8");
     }
 
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String createString(final byte[] bytes, final String encoding) {
         try {
             return null == bytes ? "" : new String(bytes, encoding);
@@ -556,10 +501,12 @@ public final class HartshornUtils {
         }
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static byte[] bytesUTF8(final String s) {
         return HartshornUtils.bytes(s, "UTF-8");
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static byte[] bytes(final String s, final String encoding) {
         try {
             // skipcq: JAVA-W0243
@@ -570,12 +517,13 @@ public final class HartshornUtils {
         }
     }
 
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String createUTF8String(final byte[] bytes) {
         return HartshornUtils.createString(bytes, "UTF-8");
     }
 
-    @SuppressWarnings("MagicNumber")
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int hashCodeIgnoreCase(final CharSequence s) {
         if (null == s) return 0;
         int hash = 0;
@@ -587,6 +535,7 @@ public final class HartshornUtils {
         return hash;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static long maximum(final long... values) {
         final int len = values.length;
         long current = values[0];
@@ -594,6 +543,7 @@ public final class HartshornUtils {
         return current;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static double minimum(final double... values) {
         final int len = values.length;
         double current = values[0];
@@ -601,6 +551,7 @@ public final class HartshornUtils {
         return current;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static double maximum(final double... values) {
         final int len = values.length;
         double current = values[0];
@@ -608,6 +559,7 @@ public final class HartshornUtils {
         return current;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static void assertContainsIgnoreCase(final String source, final String... contains) {
         String lowerSource = source.toLowerCase();
         for (final String contain : contains) {
@@ -618,15 +570,18 @@ public final class HartshornUtils {
         }
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static Throwable deepestException(Throwable e) {
         while (null != e.getCause()) e = e.getCause();
         return e;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int size(final Object... array) {
         return null == array ? 0 : Array.getLength(array);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> T[] removeItem(final T[] array, final int pos) {
         final int length = Array.getLength(array);
         final T[] dest = (T[]) Array.newInstance(array.getClass().getComponentType(), length - 1);
@@ -641,6 +596,7 @@ public final class HartshornUtils {
         return Arrays.copyOfRange(array, start, end + 1);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> T[] toArray(final Class<T> classToCastTo, final Collection<?> c) {
         final T[] array = c.toArray((T[]) Array.newInstance(classToCastTo, c.size()));
         final Iterator<?> i = c.iterator();
@@ -651,23 +607,22 @@ public final class HartshornUtils {
         return array;
     }
 
-    public static boolean empty(@NotNull final Path file) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static boolean empty(@NonNull final Path file) {
         return !Files.exists(file) || 0 >= file.toFile().length();
     }
 
     /**
-     * Rounds a {@code double} value to a specific amount of decimals, up to at most {@link
-     * HartshornUtils#MAXIMUM_DECIMALS the maximum amount of decimals}.
+     * Rounds a {@code double} value to a specific amount of decimals.
      *
-     * @param value
-     *         The {@code double} value to round
-     * @param decimalPlaces
-     *         The amount of decimal places
+     * @param value The {@code double} value to round
+     * @param decimalPlaces The amount of decimal places
      *
      * @return The rounded {@code double}
      */
+    @Deprecated(since = "22.1", forRemoval = true)
     public static double round(final double value, final int decimalPlaces) {
-        if (Double.isNaN(value) || Double.isInfinite(value) || MAXIMUM_DECIMALS < decimalPlaces) {
+        if (Double.isNaN(value) || Double.isInfinite(value)) {
             return value;
         }
 
@@ -676,13 +631,15 @@ public final class HartshornUtils {
         return decimal.doubleValue();
     }
 
-    @NotNull
-    public static Path createPathIfNotExists(@NotNull final Path path) {
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static Path createPathIfNotExists(@NonNull final Path path) {
         if (!path.toFile().exists()) path.toFile().mkdirs();
         return path;
     }
 
-    public static Path createFileIfNotExists(@NotNull final Path file) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static Path createFileIfNotExists(@NonNull final Path file) {
         if (!Files.exists(file)) {
             try {
                 Files.createDirectories(file.getParent());
@@ -694,12 +651,22 @@ public final class HartshornUtils {
         }
         return file;
     }
+    
+    public static String contentOrEmpty(@NonNull final Path file) {
+        try {
+            return Files.readString(file);
+        }
+        catch (final IOException ignored) {
+            return "";
+        }
+    }
 
-    @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean unwrap(final Optional<Boolean> optional) {
         return optional.isPresent() && optional.get();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean unwrap(final Exceptional<Boolean> exceptional) {
         return exceptional.present() && exceptional.get();
     }
@@ -710,16 +677,14 @@ public final class HartshornUtils {
      * cuboid, {@code min} represents point D, {@code max} represents point F, and {@code vec} is
      * represented by point I.
      *
-     * @param min
-     *         The minimum vector of the cuboid region
-     * @param max
-     *         The maximum vector of the cuboid region
-     * @param vec
-     *         The vector position in 3D space
+     * @param min The minimum vector of the cuboid region
+     * @param max The maximum vector of the cuboid region
+     * @param vec The vector position in 3D space
      *
      * @return true if {@code vec} is inside the 3D cuboid region
      * @see HartshornUtils#inCuboidRegion(int, int, int, int, int, int, int, int, int)
      */
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean inCuboidRegion(final Vector3N min, final Vector3N max, final Vector3N vec) {
         return HartshornUtils.inCuboidRegion(
                 min.xI(), max.xI(),
@@ -736,34 +701,26 @@ public final class HartshornUtils {
      * {@code min} represents point D, {@code max} represents point F, and {@code vec} is represented
      * by point I.
      *
-     * @param x_min
-     *         The position of the minimum vector on the X axis
-     * @param x_max
-     *         The position of the maximum vector on the X axis
-     * @param y_min
-     *         The position of the minimum vector on the Y axis
-     * @param y_max
-     *         The position of the maximum vector on the Y axis
-     * @param z_min
-     *         The position of the minimum vector on the Z axis
-     * @param z_max
-     *         The position of the maximum vector on the Z axis
-     * @param x
-     *         The position of the vector on the X axis
-     * @param y
-     *         The position of the vector on the Y axis
-     * @param z
-     *         The position of the vector on the Z axis
+     * @param x_min The position of the minimum vector on the X axis
+     * @param x_max The position of the maximum vector on the X axis
+     * @param y_min The position of the minimum vector on the Y axis
+     * @param y_max The position of the maximum vector on the Y axis
+     * @param z_min The position of the minimum vector on the Z axis
+     * @param z_max The position of the maximum vector on the Z axis
+     * @param x The position of the vector on the X axis
+     * @param y The position of the vector on the Y axis
+     * @param z The position of the vector on the Z axis
      *
      * @return true if the defined vector is inside the 3D cuboid region
      */
-    @SuppressWarnings("OverlyComplexBooleanExpression")
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean inCuboidRegion(final int x_min, final int x_max, final int y_min, final int y_max, final int z_min, final int z_max, final int x, final int y, final int z) {
         return x_min <= x && x <= x_max
                 && y_min <= y && y <= y_max
                 && z_min <= z && z <= z_max;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static Vector3N minimumPoint(final Vector3N pos1, final Vector3N pos2) {
         final float minX = Math.min(pos1.xF(), pos2.xF());
         final float minY = Math.min(pos1.yF(), pos2.yF());
@@ -771,6 +728,7 @@ public final class HartshornUtils {
         return Vector3N.of(minX, minY, minZ);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static Vector3N maximumPoint(final Vector3N pos1, final Vector3N pos2) {
         final float maxX = Math.max(pos1.xF(), pos2.xF());
         final float maxY = Math.max(pos1.yF(), pos2.yF());
@@ -778,6 +736,7 @@ public final class HartshornUtils {
         return Vector3N.of(maxX, maxY, maxZ);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static Vector3N centerPoint(final Vector3N pos1, final Vector3N pos2) {
         final float centerX = (pos1.xF() + pos2.xF()) / 2;
         final float centerY = (pos1.yF() + pos2.yF()) / 2;
@@ -785,12 +744,13 @@ public final class HartshornUtils {
         return Vector3N.of(centerX, centerY, centerZ);
     }
 
-    @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
+    @Deprecated(since = "22.1", forRemoval = true)
     public static Exceptional<LocalDateTime> toLocalDateTime(final Optional<Instant> optionalInstant) {
         return Exceptional.of(optionalInstant).map(HartshornUtils::toLocalDateTime);
     }
 
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static LocalDateTime toLocalDateTime(final Instant dt) {
         return LocalDateTime.ofInstant(dt, ZoneId.systemDefault());
     }
@@ -798,31 +758,28 @@ public final class HartshornUtils {
     /**
      * Merge t [ ].
      *
-     * @param arrayOne
-     *         the array one
-     * @param arrayTwo
-     *         the array two
+     * @param arrayOne the array one
+     * @param arrayTwo the array two
      *
      * @return the t [ ]
      */
     public static <T> T[] merge(final T[] arrayOne, final T[] arrayTwo) {
-        final Set<T> merged = HartshornUtils.asSet(arrayOne);
-        merged.addAll(HartshornUtils.asSet(arrayTwo));
+        final Set<T> merged = new HashSet<>();
+        merged.addAll(Set.of(arrayOne));
+        merged.addAll(Set.of(arrayTwo));
         return merged.toArray(arrayOne);
     }
 
     /**
      * Add all t [ ].
      *
-     * @param <T>
-     *         the type parameter
-     * @param array1
-     *         the array 1
-     * @param array2
-     *         the array 2
+     * @param <T> the type parameter
+     * @param array1 the array 1
+     * @param array2 the array 2
      *
      * @return the t [ ]
      */
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> T[] addAll(final T[] array1, final T[] array2) {
         if (null == array1) {
             return HartshornUtils.shallowCopy(array2);
@@ -839,13 +796,12 @@ public final class HartshornUtils {
     /**
      * Shallow copy t @ nullable [ ].
      *
-     * @param <T>
-     *         the type parameter
-     * @param array
-     *         the array
+     * @param <T> the type parameter
+     * @param array the array
      *
      * @return the t @ nullable [ ]
      */
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> T @Nullable [] shallowCopy(final T[] array) {
         if (null == array) {
             return null;
@@ -857,6 +813,7 @@ public final class HartshornUtils {
         return null != value && !value.isEmpty();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean empty(final Object object) {
         if (null == object) return true;
         if (object instanceof String) return HartshornUtils.empty((String) object);
@@ -865,42 +822,44 @@ public final class HartshornUtils {
         else return false;
     }
 
-    public static boolean equals(@NonNls final String str1, @NonNls final String str2) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static boolean equals(final String str1, final String str2) {
         if (null == str1 || null == str2) {
-            //noinspection StringEquality
             return str1 == str2;
         }
         return str1.equals(str2);
     }
 
-    public static boolean equalsIgnoreCase(@NonNls final String s1, @NonNls final String s2) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static boolean equalsIgnoreCase(final String s1, final String s2) {
         if (null == s1 || null == s2) {
-            //noinspection StringEquality
             return s1 == s2;
         }
         return s1.equalsIgnoreCase(s2);
     }
 
-    public static boolean equalsWithTrim(@NonNls final String s1, @NonNls final String s2) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static boolean equalsWithTrim(final String s1, final String s2) {
         if (null == s1 || null == s2) {
-            //noinspection StringEquality
             return s1 == s2;
         }
         return s1.trim().equals(s2.trim());
     }
 
-    public static boolean equalsIgnoreCaseWithTrim(@NonNls final String s1, @NonNls final String s2) {
+    @Deprecated(since = "22.1", forRemoval = true)
+    public static boolean equalsIgnoreCaseWithTrim(final String s1, final String s2) {
         if (null == s1 || null == s2) {
-            //noinspection StringEquality
             return s1 == s2;
         }
         return s1.trim().equalsIgnoreCase(s2.trim());
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean notEqual(final Object expected, final Object actual) {
         return !HartshornUtils.equal(expected, actual);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean equal(final Object expected, final Object actual) {
         if (null != expected || null != actual) {
             return !(null == expected || !expected.equals(actual));
@@ -908,23 +867,28 @@ public final class HartshornUtils {
         return false;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean notSame(final Object expected, final Object actual) {
         return !HartshornUtils.same(expected, actual);
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean same(final Object expected, final Object actual) {
         return expected == actual;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean hasContent(final String s) {
         return !(0 == HartshornUtils.trimLength(s)); // faster than returning !empty()
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static int trimLength(final String s) {
         // skipcq: JAVA-W0243
         return (null == s) ? 0 : s.trim().length();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean containsIgnoreCase(final String source, final String... contains) {
         String lowerSource = source.toLowerCase();
         for (final String contain : contains) {
@@ -937,6 +901,7 @@ public final class HartshornUtils {
         return true;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> boolean contains(final T[] objects, final T object) {
         for (final T t : objects) {
             if (same(object, t)) return true;
@@ -944,6 +909,7 @@ public final class HartshornUtils {
         return false;
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static <T> boolean containsEqual(final T[] objects, final T object) {
         for (final T t : objects) {
             if (same(object, t) || equal(object, t)) return true;
@@ -955,6 +921,7 @@ public final class HartshornUtils {
         return s.replaceAll("[\n\r ]+", "").trim();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static boolean empty(final Object... array) {
         return null == array || 0 == Array.getLength(array);
     }
@@ -963,8 +930,7 @@ public final class HartshornUtils {
      * Returns true if a given {@link CheckedRunnable function} does not throw any type of exception
      * when ran. Acts as inverse of {@link HartshornUtils#throwsException(CheckedRunnable)}.
      *
-     * @param runnable
-     *         The function to run
+     * @param runnable The function to run
      *
      * @return true if the function does not throw an exception
      * @see HartshornUtils#throwsException(CheckedRunnable)
@@ -976,8 +942,7 @@ public final class HartshornUtils {
     /**
      * Returns true if a given {@link CheckedRunnable function} throws any type of exception when ran.
      *
-     * @param runnable
-     *         The function to run
+     * @param runnable The function to run
      *
      * @return true if the function throws an exception
      */
@@ -996,10 +961,8 @@ public final class HartshornUtils {
      * exception when ran. Acts as inverse of {@link HartshornUtils#throwsException(CheckedRunnable,
      * Class)}.
      *
-     * @param runnable
-     *         The function to run
-     * @param exception
-     *         The expected type of exception
+     * @param runnable The function to run
+     * @param exception The expected type of exception
      *
      * @return true if the function does not throw an exception
      * @see HartshornUtils#throwsException(CheckedRunnable, Class)
@@ -1012,10 +975,8 @@ public final class HartshornUtils {
      * Returns true if a given {@link CheckedRunnable function} throws a specific type of exception
      * when ran.
      *
-     * @param runnable
-     *         The function to run
-     * @param exception
-     *         The expected type of exception
+     * @param runnable The function to run
+     * @param exception The expected type of exception
      *
      * @return true if the function throws the expected exception
      */
@@ -1061,7 +1022,7 @@ public final class HartshornUtils {
 
     @SafeVarargs
     public static <T> Collection<T> merge(final Collection<T>... collections) {
-        final Collection<T> merged = HartshornUtils.emptySet();
+        final Collection<T> merged = new HashSet<>();
         for (final Collection<T> collection : collections) {
             merged.addAll(collection);
         }
@@ -1070,7 +1031,7 @@ public final class HartshornUtils {
 
     @SafeVarargs
     public static <T, R> Object[] all(final Function<T, R> function, final T... input) {
-        final List<R> out = HartshornUtils.emptyList();
+        final Collection<R> out = new ArrayList<>();
         for (final T t : input) {
             out.add(function.apply(t));
         }
@@ -1106,13 +1067,15 @@ public final class HartshornUtils {
         return result.toString();
     }
 
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String wrap(final String fullName, final int max) {
         final int start = fullName.length() - max;
         if (start < 0) return fullName + repeat(" ", -start);
         else return fullName.substring(start);
     }
 
-    @NotNull
+    @NonNull
+    @Deprecated(since = "22.1", forRemoval = true)
     public static String repeat(final String string, final int amount) {
         final StringBuilder sb = new StringBuilder();
         for (final int ignored : HartshornUtils.range(1, amount)) sb.append(string);
@@ -1153,7 +1116,7 @@ public final class HartshornUtils {
         return asSet(merge(differenceInOne, differenceInTwo));
     }
 
-    @NotNull
+    @NonNull
     public static <T> Set<T> asSet(final Collection<T> collection) {
         return new HashSet<>(collection);
     }
@@ -1175,12 +1138,5 @@ public final class HartshornUtils {
                 || System.getenv().containsKey("TRAVIS")
                 || System.getenv().containsKey("GITHUB_ACTIONS")
                 || System.getenv().containsKey("APPVEYOR");
-    }
-
-    public enum Provision {
-        /** Uses the field name to process field information. */
-        FIELD,
-        /** Uses the field to process field information. */
-        FIELD_NAME
     }
 }
